--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -16,7 +16,7 @@ My Blog
     <img src="{% static "blog/images/New-file.gif" %}" alt="Max - The Author Of This Blog" />
     <h2>PRAVEEN'S BLOG</h2>
   </header>
-  <p>Hi, I am Praveen and I love to be fucked by my friends about tech and the world!</p>
+  <p>Hi, I am Praveen and I love to learn about tech and the world!</p>
 </section>
 
 <section id="latest-posts">
