--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -26,6 +26,18 @@
       <span class="tag">{{ tag.caption }}</span>
     {% endfor %}
   </div>
+  <div id="read-later">
+    <form action="{% url "read-later" %}" method="POST">
+      {% csrf_token %}
+      <input type="hidden" value = {{post.id}} name="post_id">
+      {% if saved_for_later %}
+        <button>Remove from "Read Later"</button>
+      {% else %}
+        <button>Read Later</button>
+      {% endif %}
+      
+    </form>
+  </div>
   <article>
     <img src="{{ post.image.url }}" alt="{{ post.title }}" />
     <address>By <a href="mailto:{{ post.author.email_address }}">{{ post.author }}</a></address>
